# Shiftropolis

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: android-build.yml  android-buildnano  ci.yml  quick-check.yml  release.yml
src/: lib.rs  main.rs
src/app/: camera.rs  mod.rs
src/app/core/: arena.rs  gameplay.rs  mod.rs  types.rs
src/app/data/: mod.rs
src/app/game/: input.rs  mod.rs  player.rs  states.rs
src/app/generation/: mod.rs
src/app/mesh_generation/: mod.rs
src/app/monitoring/: mod.rs
src/app/ui/: mod.rs
src/core/: gameplay.rs
src/game/: input.rs  mod.rs  player.rs
src/main/: camera.rs
src/main/core/: arena.rs  types.rs
src/main/generation/: mod.rs
src/main/monitoring/: mod.rs
src/ui/: mod.rs
